--- a/.gitignore
+++ b/.gitignore
@@ -324,3 +324,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,osx,windows,linux,visualstudiocode,pycharm
+# Add by project team
+.idea
