--- a/.gitignore
+++ b/.gitignore
@@ -326,3 +326,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/python,osx,windows,linux,visualstudiocode,pycharm
 # Add by project team
 .idea
+jardiquest/jardiquest.db
